[package]
name = "blockchain-ssd"
publish = false
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
chrono = "0.4.19"
sha2 = "0.10.2"
digest = "0.10.3"
tokio = "1.17.0"
tonic = "0.7.0"
prost = "0.10"
primitive-types = "0.11.1"
to-binary = "0.4"
hex = "0.4.3"

[build-dependencies]
tonic-build = "0.7"