[package]
name = "blockchain-ssd"
publish = false
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "network"
path = "src/peer.rs"

[dependencies]
log = "0.4"
env_logger = "0.9.0"
primitive-types = "0.11.1"
to-binary = "0.4"
parking_lot = "0.12.0"
futures = "0.3.21"
hex = "0.4.3"
rand = "0.8.5"
chrono = "0.4.19"
sha2 = "0.10.2"
digest = "0.10.3"
tonic = "0.7.2"
prost = "0.10.3"
tokio = { version = "1.18.2", features = ["macros","rt-multi-thread", "signal","sync"] } 

[build-dependencies]
tonic-build = "0.7"